--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@mui/material": "^5.14.17",
     "next": "^13.5.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-spring": "^9.7.3",
+    "react-use-gesture": "^9.1.3"
   },
   "devDependencies": {
     "@types/node": "^20",
