--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "react": "^18",
     "react-dom": "^18",
     "react-spring": "^9.7.3",
-    "react-use-gesture": "^9.1.3"
+    "react-use-gesture": "^9.1.3",
+    "scroll-lock": "^2.1.5"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/scroll-lock": "^2.1.3",
     "eslint": "^8",
     "eslint-config-next": "14.0.2",
     "typescript": "^5"
