--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18",
     "react-spring": "^9.7.3",
     "react-use-gesture": "^9.1.3",
+    "sass": "^1.69.5",
     "scroll-lock": "^2.1.5"
   },
   "devDependencies": {
