--- a/package.json
+++ b/package.json
@@ -6,23 +6,33 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "dbseed": "npx tsx prisma/seed.ts"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@next/bundle-analyzer": "^13.4.17",
+    "@prisma/client": "^5.5.2",
+    "@tinymce/tinymce-react": "^4.3.2",
+    "axios": "^1.4.0",
+    "dompurify": "^3.0.6",
     "next": "^13.5.6",
+    "next-auth": "^4.23.1",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/next-auth": "^3.15.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.0.2",
+    "prisma": "^5.6.0",
     "typescript": "^5"
   }
 }
