--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "next": "^13.5.6",
     "next-auth": "^4.23.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "@types/next-auth": "^3.15.0",
