almost got images working. upload works, just not viewing

--- a/.env
+++ b/.env
@@ -1,9 +1,13 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-POSTGRES_PRISMA_URL="postgres://postgres:76t&^T76t@localhost:5432/thoughtsoffather"
-POSTGRES_URL_NON_POOLING="postgres://postgres:76t&^T76t@localhost:5432/thoughtsoffather"
-
+# Created by Vercel CLI
+BLOB_READ_WRITE_TOKEN="vercel_blob_rw_AosWcHlkoDeFxg8r_tRhkqUkXJyWhWzFG9OFI4Ux8E3CqXO"
+POSTGRES_DATABASE="verceldb"
+POSTGRES_HOST="ep-late-thunder-60898790-pooler.us-east-1.postgres.vercel-storage.com"
+POSTGRES_PASSWORD="lS9KyxeW5fdH"
+POSTGRES_PRISMA_URL="postgres://default:lS9KyxeW5fdH@ep-late-thunder-60898790-pooler.us-east-1.postgres.vercel-storage.com/verceldb?pgbouncer=true&connect_timeout=15"
+POSTGRES_URL="postgres://default:lS9KyxeW5fdH@ep-late-thunder-60898790-pooler.us-east-1.postgres.vercel-storage.com/verceldb"
+POSTGRES_URL_NON_POOLING="postgres://default:lS9KyxeW5fdH@ep-late-thunder-60898790.us-east-1.postgres.vercel-storage.com/verceldb"
+POSTGRES_USER="default"
+VERCEL="1"
+VERCEL_ENV="development"
+LocalPOSTGRES_PRISMA_URL="postgres://postgres:76t&^T76t@localhost:5432/thoughtsoffather"
+LocalPOSTGRES_URL_NON_POOLING="postgres://postgres:76t&^T76t@localhost:5432/thoughtsoffather"
